--- a/main/resources/application.properties
+++ b/main/resources/application.properties
@@ -1,13 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/findingtables
 spring.datasource.username=root
-spring.datasource.password=Mr13082002!
+spring.datasource.password=root
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
-
-spring.mail.host=smtp.yandex.ru
-spring.mail.username=uw@dru.su
-spring.mail.password=12345678
-spring.mail.port=465
-spring.mail.protocol=smtps
-mail.debug=true
